--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,18 @@
 .text-white{
     color: white;
 }
+
+.text-black-bold{
+    color: black;
+    font-weight: bold;
+}
+
+#nav-icon{
+    height: 40px;
+    width: 40px;
+}
+
+#mixing-gif{
+    height: 60px;
+    width: 60px;
+}
