--- a/resources/sass/game.scss
+++ b/resources/sass/game.scss
@@ -3,7 +3,6 @@ div.input-color{
     height: 100px;
 }
 
-.text-black-bold{
-    color: black;
-    font-weight: bold;
+.mt-10{
+    margin-top: 6em !important;
 }
