--- a/public/css/game.css
+++ b/public/css/game.css
@@ -7,3 +7,9 @@ div.input-color {
   margin-top: 6em !important;
 }
 
+#game-timer {
+  height: 100px;
+  font-size: 56px;
+  letter-spacing: 0.3em;
+}
+
