--- a/resources/sass/game.scss
+++ b/resources/sass/game.scss
@@ -6,3 +6,9 @@ div.input-color{
 .mt-10{
     margin-top: 6em !important;
 }
+
+#game-timer{
+    height: 100px;
+    font-size: 56px;
+    letter-spacing: 0.3em;
+}
