--- a/public/css/game.css
+++ b/public/css/game.css
@@ -3,6 +3,12 @@ div.input-color {
   height: 100px;
 }
 
+div.input-color .placeholder {
+  width: 80px;
+  height: 80px;
+  margin: 10px;
+}
+
 .mt-10 {
   margin-top: 6em !important;
 }
@@ -11,5 +17,10 @@ div.input-color {
   height: 100px;
   font-size: 56px;
   letter-spacing: 0.3em;
+}
+
+#solution-placeholder div.input-color {
+  background-color: #a3a3a3;
+  border: 1px solid black;
 }
 
