--- a/resources/sass/game.scss
+++ b/resources/sass/game.scss
@@ -1,6 +1,12 @@
 div.input-color{
     width: 100px;
     height: 100px;
+
+    & .placeholder{
+        width: 80px;
+        height: 80px;
+        margin: 10px;
+    }
 }
 
 .mt-10{
@@ -11,4 +17,9 @@ div.input-color{
     height: 100px;
     font-size: 56px;
     letter-spacing: 0.3em;
+}
+
+#solution-placeholder div.input-color {
+    background-color: #a3a3a3;
+    border: 1px solid black;
 }
